--- a/src/main/resources/templates/community/communityHome.html
+++ b/src/main/resources/templates/community/communityHome.html
@@ -26,7 +26,7 @@
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#about">About</a></li>
         <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-        <li class="sidebar-nav-item"><a href="/community">커뮤니티</a></li>
+        <li class="sidebar-nav-item"><a href="/board">커뮤니티</a></li>
     </ul>
 </nav>
 <!-- Header-->
@@ -54,40 +54,6 @@
     </div>
 </section>
 <!-- Services-->
-<section class="content-section bg-primary text-white text-center" id="services">
-    <div class="container px-4 px-lg-5">
-        <div class="content-section-heading">
-            <h3 class="text-secondary mb-0">Services</h3>
-            <h2 class="mb-5">What We Offer</h2>
-        </div>
-        <div class="row gx-4 gx-lg-5">
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                <h4><strong>Responsive</strong></h4>
-                <p class="text-faded mb-0">Looks great on any screen size!</p>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                <h4><strong>Redesigned</strong></h4>
-                <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                <h4><strong>Favorited</strong></h4>
-                <p class="text-faded mb-0">
-                    Millions of users
-                    <i class="fas fa-heart"></i>
-                    Start Bootstrap!
-                </p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                <h4><strong>Question</strong></h4>
-                <p class="text-faded mb-0">I mustache you a question...</p>
-            </div>
-        </div>
-    </div>
-</section>
 <!-- Footer-->
 <footer class="footer text-center">
     <div class="container px-4 px-lg-5">
