--- a/src/main/resources/templates/community/communityHome.html
+++ b/src/main/resources/templates/community/communityHome.html
@@ -1,81 +1,239 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Simple line icons-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-</head>
-<body id="page-top">
-<!-- Navigation-->
-<a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-<nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
-        <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-        <li class="sidebar-nav-item"><a href="#about">About</a></li>
-        <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-        <li class="sidebar-nav-item"><a href="/board">커뮤니티</a></li>
-    </ul>
-</nav>
-<!-- Header-->
-<header class="masthead d-flex align-items-center">
-    <div class="container px-4 px-lg-5 text-center">
-        <h1 class="mb-1">Stylish Portfolio</h1>
-        <h3 class="mb-5"><em>A Free Bootstrap Theme by Start Bootstrap</em></h3>
-        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link href="/css/communityHome.css" rel="stylesheet" type="text/css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+    <div class="row">
+        <h2>Time Line</h2>
     </div>
-</header>
-<!-- About-->
-<section class="content-section bg-light" id="about">
-    <div class="container px-4 px-lg-5 text-center">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-lg-10">
-                <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                <p class="lead mb-5">
-                    This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                    <a href="https://unsplash.com/">Unsplash</a>
-                    !
-                </p>
-                <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
-            </div>
-        </div>
+    <div class="qa-message-list" id="wallmessages">
+        <div class="message-item" id="m16">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=Oleg+Kolesnichenko"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">Oleg Kolesnichenko</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Jan 21</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=Oleg+Kolesnichenko">Oleg Kolesnichenko</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Yo!
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m9">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=amiya"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">amiya</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Nov 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=amiya">amiya</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Nice theme . Excellent one .
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m7">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=russell"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">russell</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 25, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=russell">russell</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Nullam porta leo vitae ipsum feugiat viverra. In sed placerat mi. Nullam euismod, quam in euismod rhoncus, tellus velit posuere tortor, non cursus nunc velit et lacus.
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m6">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=juggornot"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">juggornot</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=juggornot">juggornot</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Integer vitae arcu vitae ligula Cras vestibulum suscipit odio ac dapibus. In hac habitasse platea dictumst. Cras pulvinar erat et nunc fringilla, quis molestie
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m5">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=one_eyed"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">one_eyed</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=one_eyed">one_eyed</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Nulla dui ante, pulvinar ac auctor vitae, sollicitudin et tortor. Cras vestibulum suscipit odio ac dapibus. In hac habitasse platea dictumst. Cras pulvinar erat et nunc fringilla, quis molestie diam pulvinar.
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m4">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=muboy"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">muboy</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=muboy">muboy</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus fermentum iaculis mi, non dapibus nulla eleifend sed. Etiam ac commodo leo. <br>
+                    Donec non sem id tellus mattis convallis. Morbi dapibus nulla ac dui lacinia,
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m3">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=monu"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">monu</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=monu">monu</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Suspendisse varius mi consectetur nulla volutpat, nec fermentum turpis vehicula. Curabitur dapibus odio mauris, vitae accumsan sapien auctor non. Duis tempus ante id nulla vestibulum mattis.
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m2">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=Fynn"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">Fynn</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=Fynn">Fynn</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Nunc ante neque, feugiat at dictum ut, dignissim sed sapien. Pellentesque congue eu nisl sit amet cursus. Integer dapibus adipiscing metus ac vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </div>
+            </div></div>
+
+        <div class="message-item" id="m1">
+            <div class="message-inner">
+                <div class="message-head clearfix">
+                    <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=admin"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+                    <div class="user-detail">
+                        <h5 class="handle">admin</h5>
+                        <div class="post-meta">
+                            <div class="asker-meta">
+                                <span class="qa-message-what"></span>
+                                <span class="qa-message-when">
+												<span class="qa-message-when-data">Oct 24, 2013</span>
+											</span>
+                                <span class="qa-message-who">
+												<span class="qa-message-who-pad">by </span>
+												<span class="qa-message-who-data"><a href="./index.php?qa=user&qa_1=admin">admin</a></span>
+											</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="qa-message-content">
+                    Nunc ante neque, feugiat at dictum ut, dignissim sed sapien. Pellentesque congue eu nisl sit amet cursus. Integer dapibus adipiscing metus ac vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus fermentum iaculis mi, non dapibus nulla eleifend sed. Etiam ac commodo leo. Donec non sem id tellus mattis convallis. Morbi dapibus nulla ac dui lacinia,
+                </div>
+            </div></div>
+
     </div>
-</section>
-<!-- Services-->
-<!-- Footer-->
-<footer class="footer text-center">
-    <div class="container px-4 px-lg-5">
-        <ul class="list-inline mb-5">
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-            </li>
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-            </li>
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
-            </li>
-        </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
-    </div>
-</footer>
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-</body>
-</html>
+</div>
