커뮤니티 생성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
         <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
         <li class="sidebar-nav-item"><a href="#about">About</a></li>
         <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-        <li class="sidebar-nav-item"><a href="/community">커뮤니티</a></li>
+        <li class="sidebar-nav-item"><a href="/communityHome">커뮤니티</a></li>
     </ul>
 </nav>
 <!-- Header-->
