--- a/src/main/resources/templates/community/communityHome.html
+++ b/src/main/resources/templates/community/communityHome.html
@@ -2,11 +2,17 @@
 <link href="/css/communityHome.css" rel="stylesheet" type="text/css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <!------ Include the above in your HEAD tag ---------->
+
+<div class="d-grid gap-2" style="float:right;">
+    <button class="btn btn-lg btn-primary" type="button" ><a href="/communityBoard">Time Line 더보기</a></button>
+</div>
 
 <div class="container">
     <div class="row">
-        <h2>Time Line</h2>
+        <h2>Community Time Line</h2>
     </div>
     <div class="qa-message-list" id="wallmessages">
         <div class="message-item" id="m16">
