--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,115 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate ="~{layouts/layout}">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Simple line icons-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+  <!--    thymeleaf layout dialect가 contents페이지의 head태그를 layout의 head태그에 자동으로 추가해준다. -->
+  <!--    필요힌 css, script 추가영역 -->
 </head>
-<body id="page-top">
-<!-- Navigation-->
-<a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-<nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
-        <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-        <li class="sidebar-nav-item"><a href="#about">About</a></li>
-        <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-        <li class="sidebar-nav-item"><a href="/communityHome">커뮤니티</a></li>
-    </ul>
-</nav>
-<!-- Header-->
-<header class="masthead d-flex align-items-center">
+<div layout:fragment="content">
+  <section class="content-section bg-light" id="about">
     <div class="container px-4 px-lg-5 text-center">
-        <h1 class="mb-1">Stylish Portfolio</h1>
-        <h3 class="mb-5"><em>A Free Bootstrap Theme by Start Bootstrap</em></h3>
-        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-    </div>
-</header>
-<!-- About-->
-<section class="content-section bg-light" id="about">
-    <div class="container px-4 px-lg-5 text-center">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-lg-10">
-                <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                <p class="lead mb-5">
-                    This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                    <a href="https://unsplash.com/">Unsplash</a>
-                    !
-                </p>
-                <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
-            </div>
+      <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-lg-10">
+          <h2>헤더 푸터 나누기 성공!</h2>
+          <p class="lead mb-5">
+            Peperoday project
+            <a href="#">Unsplash</a>
+            !
+          </p>
+          <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
         </div>
+      </div>
     </div>
-</section>
-<!-- Services-->
-<section class="content-section bg-primary text-white text-center" id="services">
+  </section>
+  <!-- Services-->
+  <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container px-4 px-lg-5">
-        <div class="content-section-heading">
-            <h3 class="text-secondary mb-0">Services</h3>
-            <h2 class="mb-5">What We Offer</h2>
+      <div class="content-section-heading">
+        <h3 class="text-secondary mb-0">Services</h3>
+        <h2 class="mb-5">헤더 푸터 나누기 성공!</h2>
+      </div>
+      <div class="row gx-4 gx-lg-5">
+        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
+          <h4><strong>Responsive</strong></h4>
+          <p class="text-faded mb-0">Looks great on any screen size!</p>
         </div>
-        <div class="row gx-4 gx-lg-5">
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                <h4><strong>Responsive</strong></h4>
-                <p class="text-faded mb-0">Looks great on any screen size!</p>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                <h4><strong>Redesigned</strong></h4>
-                <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                <h4><strong>Favorited</strong></h4>
-                <p class="text-faded mb-0">
-                    Millions of users
-                    <i class="fas fa-heart"></i>
-                    Start Bootstrap!
-                </p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                <h4><strong>Question</strong></h4>
-                <p class="text-faded mb-0">I mustache you a question...</p>
-            </div>
+        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
+          <h4><strong>Redesigned</strong></h4>
+          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
         </div>
+        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+          <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
+          <h4><strong>Favorited</strong></h4>
+          <p class="text-faded mb-0">
+            Millions of users
+            <i class="fas fa-heart"></i>
+            Start Bootstrap!
+          </p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
+          <h4><strong>Question</strong></h4>
+          <p class="text-faded mb-0">I mustache you a question...</p>
+        </div>
+      </div>
     </div>
-</section>
-<!-- Footer-->
-<footer class="footer text-center">
-    <div class="container px-4 px-lg-5">
-        <ul class="list-inline mb-5">
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-            </li>
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-            </li>
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
-            </li>
-        </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
-    </div>
-</footer>
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-</body>
+  </section>
+</div>
 </html>
