--- a/src/main/resources/templates/fragments/communitySidebar.html
+++ b/src/main/resources/templates/fragments/communitySidebar.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:fragment="sidebarFragment">
+<th:block th:fragment="communitySidebarFragment">
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand"><a href="#page-top">메뉴</a></li>
             <li class="sidebar-nav-item"><a href="/">홈으로</a></li>
-            <li class="sidebar-nav-item"><a href="#about">About</a></li>
-            <li class="sidebar-nav-item"><a href="#services">Services</a></li>
             <li class="sidebar-nav-item"><a href="/communityHome">커뮤니티</a></li>
             <li class="sidebar-nav-item"><a href="/communityBoard">게시판</a></li>
         </ul>
