[커뮤니티 타임라인 페이지 타임리프 적용] - 경로 구조 수정

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -33,7 +33,7 @@
 <!-- Navigation-->
 <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 <!-- Sidebar-->
-<th:block th:replace="/fragments/sidebar :: sidebarFragment"></th:block>
+<th:block th:replace="/fragments/index/sidebar :: sidebarFragment"></th:block>
 <!-- Sidebar 끝-->
 
 <!-- Header-->
