[로그인 페이지 타임리프 적용] - 로그인, 회원가입 페이지 추가

--- a/src/main/resources/templates/fragments/login/loginSidebar.html
+++ b/src/main/resources/templates/fragments/login/loginSidebar.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:fragment="sidebarFragment">
+<th:block th:fragment="loginSidebarFragment">
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand"><a href="#page-top">메뉴</a></li>
             <li class="sidebar-nav-item"><a href="/">홈으로</a></li>
-            <li class="sidebar-nav-item"><a href="#about">About</a></li>
-            <li class="sidebar-nav-item"><a href="#services">Services</a></li>
             <li class="sidebar-nav-item"><a href="/communityHome">커뮤니티</a></li>
             <li class="sidebar-nav-item"><a href="/communityBoard">게시판</a></li>
-            <li class="sidebar-nav-item"><a href="/loginPage">로그인</a></li>
         </ul>
     </nav>
 </th:block>
