레이아웃 구조 변경

--- a/src/main/resources/templates/fragments/community/communitySidebar.html
+++ b/src/main/resources/templates/fragments/community/communitySidebar.html
@@ -8,6 +8,7 @@
             <li class="sidebar-nav-item"><a href="/">홈으로</a></li>
             <li class="sidebar-nav-item"><a href="/communityHome">커뮤니티</a></li>
             <li class="sidebar-nav-item"><a href="/communityBoard">게시판</a></li>
+            <li class="sidebar-nav-item"><a href="/loginPage">로그인</a></li>
         </ul>
     </nav>
 </th:block>
